Cleaned up profile, fixed profiIe, fixed winner check during match, added GDPR compliance

--- a/app/frontend/html/templates/en/home.html
+++ b/app/frontend/html/templates/en/home.html
@@ -34,7 +34,11 @@
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
     <p id="footer_credits">FT_Transcendence has been created by the team "El Fin de la Cosa" for 42 Málaga.<br><br>
-        Team members: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
-        Cookies policy: <i>This site does not use cookies.</i></p>
+        Team members: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br>
+        Cookies policy: <i>This site does not use cookies.</i><br>
+        Privacy policy: This site only collects email, username and password. This data is stored indefinitely.<br>
+        Users can exercise their rights by contacting the data controller at the following email address: <i>ft42games@gmail.com</i>.<br>
+        Users have information controls on their profile page to modify, anonymize or delete their data.<br>
+    </p>
 </div>
     <!--footer here-->
