--- a/app/frontend/html/templates/es/home.html
+++ b/app/frontend/html/templates/es/home.html
@@ -34,6 +34,10 @@
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
     <p id="footer_credits">FT_Transcendence ha sido creado por el equipo "El Fin de la Cosa" para 42 Málaga.<br><br>
-        Miembros del equipo: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
-        Política de cookies: <i>Este sitio no utiliza cookies.</i></p>
+        Miembros del equipo: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br>
+        Política de cookies: <i>Este sitio no utiliza cookies.</i><br>
+        Política de privacidad: Este sitio solo recopila correo electrónico, nombre de usuario y contraseña. Estos datos se almacenan indefinidamente.<br>
+        Los usuarios pueden ejercer sus derechos contactando con el responsable de los datos en la siguiente dirección de correo electrónico: <i>ft42games@gmail.com</i>.<br>
+        Los usuarios tienen controles de información en su página de perfil para modificar, anonimizar o eliminar sus datos.<br>
+    </p>
 </div>
