--- a/app/frontend/html/templates/fr/header-loggedin.html
+++ b/app/frontend/html/templates/fr/header-loggedin.html
@@ -8,6 +8,6 @@
     </div>
     <a href="#tournaments"><div class="h_basic">TOURNOIS</div></a>
     <a href="#scoreboard"><div class="h_basic">TABLEAU DE BORD</div></a>
-    <a href="#profiIe"><div class="h_basic">PROFIL</div></a>
+    <a onclick="goToProfile()" href="#profile"><div class="h_basic">PROFIL</div></a>
     <button class="h_flag_button"><img id="h_logout" src="../media/logout_icon.svg" onclick="AuthLb.logout()"></button>
 </div>
