--- a/app/frontend/html/templates/fr/home.html
+++ b/app/frontend/html/templates/fr/home.html
@@ -34,7 +34,11 @@
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
     <p id="footer_credits">FT_Transcendence a été créé par l'équipe [nom] pour 42 Málaga.<br><br>
-        Membres de l'équipe: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
-        Politique de cookies: <i>Ce site n'utilise pas de cookies.</i></p>
-</div>
+        Membres de l'équipe: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br>
+        Politique de cookies: <i>Ce site n'utilise pas de cookies.</i><br>
+        Politique de confidentialité: Ce site ne collecte que l'adresse e-mail, le nom d'utilisateur et le mot de passe. Ces données sont stockées indéfiniment.<br>
+        Les utilisateurs peuvent exercer leurs droits en contactant le responsable des données à l'adresse e-mail suivante: <i>ft42games@gmail.com</i>.<br>
+        Les utilisateurs disposent de contrôles d'information sur leur page de profil pour modifier, anonymiser ou supprimer leurs données.<br>
+    </p>
+</div>  
     <!--footer here-->
