--- a/app/frontend/html/templates/es/2fa.html
+++ b/app/frontend/html/templates/es/2fa.html
@@ -5,7 +5,7 @@
         <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.verify2fa();">
             <p class="form_label">NOMBRE</p>
             <input id="username" class="form_field" type="text" required/>
-            <p class="form_label">CONTRASEÑA</p>
+            <p class="form_label">OTP</p>
             <input id="otp" class="form_field" type="password" required/>
             <button type="submit" class="form_main_button">ENTRAR</button>
         </form>
